# cryptoMarketApi

./: CMakeLists.txt  README.md
src/: main.cpp
src/AbstractMarket/: abstractmarket.h
src/AbstractRequests/: abstractrequests.h
src/Bybit/: bybitapi.h
